--- a/index.html
+++ b/index.html
@@ -174,9 +174,7 @@
     <p>Na všechny dotazy odpovídáme do 24 hodin na e-mail, který jste zadali při nákupu. Rádi pomůžeme s čímkoli, co se týká obsahu e-booku nebo bonusového agenta.</p>
   </div>
 </section>
-  <div mx-auto>
-  <a href="#simpleshop" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
-</div>
+    <a mx-auto href="#simpleshop" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
   </main>
   <footer class="text-center text-sm text-gray-500 py-4">
     <p>&copy; 2025 KnowHowHub</p>
