--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
      aria-label="Koupit e-book"
      onclick="gtag('event','click',{'event_category':'cta'});"
      class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">
-    Chci e-book za 99 Kč
+    <span class="gradient-text">Chci e-book za 99 Kč</span>
   </a>
   <p class="mt-2">
     <a href="#faq" class="underline text-white focus:outline-none focus:ring-4 focus:ring-yellow-300">
