--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section class="product flex flex-col md:flex-row items-center bg-white p-6 rounded-2xl shadow-lg mb-8">
       <img src="images/cover.png" srcset="images/cover.png 1x, images/cover.png 2x" alt="Obálka e-booku Jak vydělat na internetu v roce 2025" class="w-48 md:w-72 rounded-2xl shadow">
       <div class="details md:ml-6 mt-4 md:mt-0">
-        <a href="#simpleshop" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300">Koupit e-book</a>
+        <a href="#simpleshop" aria-label="Koupit e-book" onclick="gtag('event','click',{'event_category':'cta'});" class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300"><span class="gradient-text">Koupit e-book</span></a>
       </div>
     </section>
   <!-- www.SimpleShop.cz form#120968 start -->
