--- a/index.html
+++ b/index.html
@@ -143,10 +143,18 @@
 <!-- www.SimpleShop.cz form#120968 end -->
 
   <section id="author" class="author bg-white p-6 rounded-2xl shadow-lg mb-8">
-      <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
-      <p>Jmenuji se Jan Novák a více než 10 let se věnuji online podnikání. V tomto e‑booku sdílím strategie, které mi umožnily dosahovat stabilního příjmu z internetu.</p>
-    </section>
-    </div>
+  <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
+  <p class="mb-2">
+    Ahoj, jsem Michal Bláha a víc než deset let se pohybuju v online podnikání – od digitálních produktů přes e-shopy až po investování. Za tu dobu jsem si vyzkoušel, jak různé přístupy fungují v praxi i co všechno obnáší jejich spuštění a udržení.
+  </p>
+  <p class="mb-2">
+    Většinu metod popsaných v tomto e-booku jsem buď sám realizoval, nebo na nich spolupracoval s lidmi z mého okolí. Některé z nich využívám dodnes, protože se dlouhodobě osvědčily.
+  </p>
+  <p>
+    V e-booku najdete nejen přehled způsobů online podnikání, ale i základní teoretické základy, které vám pomůžou jednotlivé přístupy pochopit a správně uchopit. Kromě toho získáte přístup k přednastavenému ChatGPT agentovi, který vám pomůže s prvními kroky, a také <strong>14denní garanci vrácení peněz</strong> – můžete tak vše vyzkoušet bez rizika.
+  </p>
+</section>
+
   <section id="faq" class="faq bg-white p-6 rounded-2xl shadow-lg">
   <h2 class="text-2xl font-bold mb-4">FAQ</h2>
   <div class="faq-item mb-4">
