--- a/index.html
+++ b/index.html
@@ -4,37 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jak vydělat na internetu v roce 2025 | E-book</title>
-  <meta name="description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů." />
+  <meta name="description" content="E-book s přehledem 13 ověřených metod online výdělku. Vhodné pro začátečníky i pokročilé.">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Open Graph -->
   <meta property="og:title" content="Jak vydělat na internetu v roce 2025 | E-book">
-  <meta property="og:description" content="Praktický návod, jak rozjet online projekty a vydělat na internetu.">
+  <meta property="og:description" content="Objevte 13 konkrétních metod online výdělku. Součástí je i speciální ChatGPT agent, který vám pomůže s prvními kroky.">
   <meta property="og:image" content="https://michal789-cmd.github.io/ebook/images/cover.png">
   <meta property="og:url" content="https://michal789-cmd.github.io/ebook/">
+
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Jak vydělat na internetu v roce 2025 | E-book">
-  <meta name="twitter:description" content="Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.">
+  <meta name="twitter:description" content="Získejte přehled ověřených online metod, které můžete začít využívat ihned.">
   <meta name="twitter:image" content="https://michal789-cmd.github.io/ebook/images/cover.png">
+
+  <!-- Strukturovaná data JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Product",
     "name": "Jak vydělat na internetu v roce 2025",
-    "description": "Praktický návod, jak rozjet 3 online projekty a vydělat první 30 000 Kč do 90 dnů.",
+    "description": "E-book s přehledem 13 ověřených způsobů online výdělku. Zahrnuje teoretické základy i praktické rady, jak s podnikáním začít.",
     "image": "https://michal789-cmd.github.io/ebook/images/cover.png",
     "offers": {
       "@type": "Offer",
       "url": "https://michal789-cmd.github.io/ebook/",
-      "price": "490",
+      "price": "299",
       "priceCurrency": "CZK",
       "availability": "https://schema.org/InStock"
     }
   }
   </script>
 </head>
+
 <body class="bg-gray-50 text-gray-800 font-inter">
   <div class="max-w-5xl mx-auto px-4">
 <header id="top" class="hero flex flex-col items-center justify-center text-center py-12 bg-gradient-to-r from-blue-800 to-yellow-400 text-white rounded-2xl shadow-lg mx-4">
