--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jak vydělat na internetu v roce 2025 | E-book</title>
-  <meta name="description" content="E-book s přehledem 13 ověřených metod online výdělku. Vhodné pro začátečníky i pokročilé.">
+  <meta charset="UTF-8"> <!-- Znaková sada UTF-8 pro správné zobrazení diakritiky -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responzivní nastavení viewportu: šířka = šířka zařízení, počáteční zoom 1.0 -->
+  <title>Jak vydělat na internetu v roce 2025 | E-book</title> <!-- Titulek stránky pro prohlížeč a vyhledávače -->
+  <meta name="description" content="E-book s přehledem 13 ověřených metod online výdělku. Vhodné pro začátečníky i pokročilé, včetně přístupu k chytrému GPT agentovi." /> <!-- SEO popis (snippet) ve výsledcích vyhledávání -->
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <!-- Optimalizace načítání fontů z Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Předběžné navázání spojení -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Předběžné navázání spojení s CORS -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"> <!-- Načtení fontů (Inter 400,600,800) -->
 
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://cdn.tailwindcss.com"></script> <!-- Tailwind CSS z CDN pro utility-first styling -->
+  <link rel="stylesheet" href="css/styles.css"> <!-- Vlastní styly (přizpůsobení/rozšíření Tailwindu) -->
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Jak vydělat na internetu v roce 2025 | E-book">
-  <meta property="og:description" content="Objevte 13 konkrétních metod online výdělku. Součástí je i speciální ChatGPT agent, který vám pomůže s prvními kroky.">
-  <meta property="og:image" content="https://michal789-cmd.github.io/ebook/images/cover.png">
-  <meta property="og:url" content="https://michal789-cmd.github.io/ebook/">
+  <!-- Open Graph meta tagy pro sociální sítě (Facebook, LinkedIn, atd.) -->
+  <meta property="og:title" content="Jak vydělat na internetu v roce 2025 | E-book"> <!-- Nadpis při sdílení -->
+  <meta property="og:description" content="Získejte přehled 13 reálných způsobů výdělku online. Včetně bonusového přístupu k ChatGPT agentovi, který vám pomůže začít."> <!-- Popis při sdílení -->
+  <meta property="og:image" content="https://michal789-cmd.github.io/ebook/images/cover.png"> <!-- URL náhledového obrázku -->
+  <meta property="og:url" content="https://michal789-cmd.github.io/ebook/"> <!-- Kanonická URL stránky -->
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Jak vydělat na internetu v roce 2025 | E-book">
-  <meta name="twitter:description" content="Získejte přehled ověřených online metod, které můžete začít využívat ihned.">
-  <meta name="twitter:image" content="https://michal789-cmd.github.io/ebook/images/cover.png">
-
-  <!-- Strukturovaná data JSON-LD -->
+  <!-- Strukturovaná data JSON-LD podle schema.org pro bohaté výsledky ve vyhledávačích -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Product",
-    "name": "Jak vydělat na internetu v roce 2025",
-    "description": "E-book s přehledem 13 ověřených způsobů online výdělku. Zahrnuje teoretické základy i praktické rady, jak s podnikáním začít.",
-    "image": "https://michal789-cmd.github.io/ebook/images/cover.png",
+    "@type": "Product",                /* Typ objektu: produkt */
+    "name": "Jak vydělat na internetu v roce 2025",  /* Název produktu */
+    "description": "E-book s přehledem 13 ověřených způsobů online výdělku. Zahrnuje teoretické základy i praktické tipy. Součástí je i ChatGPT agent pro rychlý start.", /* Popis produktu */
+    "image": "https://michal789-cmd.github.io/ebook/images/cover.png", /* Obrázek produktu */
     "offers": {
-      "@type": "Offer",
-      "url": "https://michal789-cmd.github.io/ebook/",
-      "price": "299",
-      "priceCurrency": "CZK",
-      "availability": "https://schema.org/InStock"
+      "@type": "Offer",               /* Nabídka produktu */
+      "url": "https://michal789-cmd.github.io/ebook/", /* Odkaz na produkt */
+      "price": "299",                 /* Cena produktu */
+      "priceCurrency": "CZK",         /* Měna */
+      "availability": "https://schema.org/InStock" /* Dostupnost: skladem */
     }
   }
   </script>
 </head>
+
 
 <body class="bg-gray-50 text-gray-800 font-inter">
   <div class="max-w-5xl mx-auto px-4">
