--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     onclick="gtag('event','click',{'event_category':'cta'});"
     class="cta-btn inline-block rounded-2xl bg-gradient-to-r from-yellow-400 to-blue-800 px-8 py-3 font-bold text-white shadow-lg hover:shadow-xl focus:outline-none focus:ring-4 focus:ring-yellow-300"
   >
-    Koupit e-book
+    <span class="gradient-text">Koupit e-book</span>
   </a>
 </div>
 
