--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <section id="author" class="author bg-white p-6 rounded-2xl shadow-lg mb-8">
   <h2 class="text-2xl font-bold mb-4">O autorovi</h2>
   <div class="flex flex-col md:flex-row items-center">
-    <img src="images/Michal.png" alt="Michal Bláha" class="w-32 h-32 rounded-full mb-4 md:mb-0 md:mr-6">
+    <img src="images/Michal.png" alt="Michal Bláha" class="w-32 h-32 rounded-full mb-4 md:mb-0 md:mr-6 object-cover flex-shrink-0">
     <div class="text-gray-700">
       <p class="mb-2">
         Ahoj, jsem Michal Bláha a víc než deset let se pohybuju v online podnikání – od digitálních produktů přes e-shopy až po investování. Za tu dobu jsem si vyzkoušel, jak různé přístupy fungují v praxi i co všechno obnáší jejich spuštění a udržení.
