--- a/index.html
+++ b/index.html
@@ -207,7 +207,21 @@
   <footer class="text-center text-sm text-gray-500 py-4">
     <p>&copy; 2025 KnowHowHub</p>
   </footer>
-  <script src="https://cdn.kiprotect.com/klaro/v0.7/klaro.min.js"></script>
-  <script src="js/cookie.js"></script>
+  !-- COOKIE BANNER -->
+<div id="cookie-banner"><div id="cookie-banner" class="fixed bottom-0 inset-x-0 bg-gray-800 text-white p-4 flex flex-col md:flex-row items-center justify-between shadow-lg transform translate-y-full transition-transform duration-300 z-50">
+  <div class="mb-4 md:mb-0 md:mr-4">
+    <p class="font-semibold">Používáme cookies</p>
+    <p class="text-sm">Nutné cookies jsou vždy aktivní. Pro marketing a analytiku (Sklik, GA) nám prosím dejte souhlas.</p>
+  </div>
+  <div class="flex space-x-2">
+    <button id="cookie-decline" class="bg-gray-600 hover:bg-gray-500 text-white font-medium py-1 px-4 rounded">
+      Pouze nutné
+    </button>
+    <button id="cookie-accept" class="bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold py-1 px-4 rounded">
+      Souhlasím s marketingem
+    </button>
+  </div>
+</div></div>
+  <script src="js/cookies.js" defer></script>
 </body>
 </html>
