--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@
 </main>
   <footer class="text-center text-sm text-gray-500 py-4">
     <p>&copy; 2025 KnowHowHub</p>
-  </footer>
-  <div id="cookie-banner"><div id="cookie-banner" class="fixed bottom-0 inset-x-0 bg-gray-800 text-white p-4 flex flex-col md:flex-row items-center justify-between shadow-lg transform translate-y-full transition-transform duration-300 z-50">
+ </footer>
+
+<!-- COOKIE BANNER (pouze JEDEN element s id="cookie-banner") -->
+<div id="cookie-banner" class="fixed bottom-0 inset-x-0 bg-gray-800 text-white p-4 flex flex-col md:flex-row items-center justify-between shadow-lg transform translate-y-full transition-transform duration-300 z-50">
   <div class="mb-4 md:mb-0 md:mr-4">
     <p class="font-semibold">Používáme cookies</p>
     <p class="text-sm">Nutné cookies jsou vždy aktivní. Pro marketing a analytiku (Sklik, GA) nám prosím dejte souhlas.</p>
@@ -220,7 +222,8 @@
       Souhlasím s marketingem
     </button>
   </div>
-</div></div>
-  <script src="js/cookies.js" defer></script>
+</div>
+
+<script src="js/cookies.js" defer></script>
 </body>
 </html>
