--- a/index.html
+++ b/index.html
@@ -211,15 +211,15 @@
 <!-- COOKIE BANNER (pouze JEDEN element s id="cookie-banner") -->
 <div id="cookie-banner" class="fixed bottom-0 inset-x-0 bg-gray-800 text-white p-4 flex flex-col md:flex-row items-center justify-between shadow-lg transform translate-y-full transition-transform duration-300 z-50">
   <div class="mb-4 md:mb-0 md:mr-4">
-    <p class="font-semibold">Používáme cookies</p>
-    <p class="text-sm">Nutné cookies jsou vždy aktivní. Pro marketing a analytiku (Sklik, GA) nám prosím dejte souhlas.</p>
+    <p class="font-semibold">Chcete lepší zážitek z webu?</p>
+    <p class="text-sm">Základní cookies používáme vždy. Díky marketingovým a analytickým ale můžeme vylepšit web, měřit zájem o e-book atd.</p>
   </div>
   <div class="flex space-x-2">
     <button id="cookie-decline" class="bg-gray-600 hover:bg-gray-500 text-white font-medium py-1 px-4 rounded">
       Pouze nutné
     </button>
     <button id="cookie-accept" class="bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold py-1 px-4 rounded">
-      Souhlasím s marketingem
+      Souhlasím
     </button>
   </div>
 </div>
