--- a/index.html
+++ b/index.html
@@ -225,5 +225,14 @@
 </div>
 
 <script src="js/cookies.js" defer></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WY626TEVFR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WY626TEVFR');
+</script>
 </body>
 </html>
