--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
 </main>
   <footer class="text-center text-sm text-gray-500 py-4">
     <p>&copy; 2025 KnowHowHub</p>
+    <p>Kontakt:</p>
+    <p>tel. 724 787 096</p>
+    <p><a href="mailto:ebookjakvydelatpenize@gmail.com" class="text-blue-700 underline">ebookjakvydelatpenize@gmail.com</a></p>
  </footer>
 
 <!-- COOKIE BANNER (pouze JEDEN element s id="cookie-banner") -->
