--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
     <h3 class="font-semibold">Jak uplatním 14denní garanci vrácení peněz?</h3>
     <p>Stačí do 14 dnů od nákupu napsat na <a href="mailto:ebookjakvydelatpenize@gmail.com" class="text-blue-700 underline">ebookjakvydelatpenize@gmail.com</a> Vaše jméno, číslo objednávky, důvod nespokojenosti a číslo účtu na který vám vrátíme peníze.</p>
   </div>
+    <div class="faq-item mb-4">
+    <h3 class="font-semibold">Kolik e-book stojí?</h3>
+    <p>Aktuální cenu včetně DPH najdete ve formuláři výše.</p>
+  </div>
   <div class="faq-item">
     <h3 class="font-semibold">Kdy a jak využiji e-mailovou podporu?</h3>
     <p>Na všechny dotazy odpovídáme do 24 hodin na e-mail, který jste zadali při nákupu. Rádi pomůžeme s čímkoli, co se týká obsahu e-booku nebo bonusového agenta.</p>
