--- a/index.html
+++ b/index.html
@@ -213,6 +213,16 @@
     <p>Kontakt:</p>
     <p>tel. 724 787 096</p>
     <p><a href="mailto:ebookjakvydelatpenize@gmail.com" class="text-blue-700 underline">ebookjakvydelatpenize@gmail.com</a></p>
+    <div class="mt-6">
+  <div class="grid grid-cols-3 gap-4 sm:grid-cols-6 items-center">
+    <img src="images/0.png" alt="" loading="lazy" class="mx-auto w-12 sm:w-16">
+    <img src="images/1.png" alt="" loading="lazy" class="mx-auto w-12 sm:w-16">
+    <img src="images/2.png" alt="" loading="lazy" class="mx-auto w-12 sm:w-16">
+    <img src="images/3.png" alt="" loading="lazy" class="mx-auto w-12 sm:w-16">
+    <img src="images/4.png" alt="" loading="lazy" class="mx-auto w-12 sm:w-16">
+    <img src="images/5.png" alt="" loading="lazy" class="mx-auto w-12 sm:w-16">
+  </div>
+</div>
  </footer>
 
 <!-- COOKIE BANNER (pouze JEDEN element s id="cookie-banner") -->
