--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   </div>
   <div class="faq-item mb-4">
     <h3 class="font-semibold">Jak uplatním 14denní garanci vrácení peněz?</h3>
-    <p>Stačí do 14 dnů od nákupu napsat na <a href="mailto:ebookjakvydelatpenize@gmail.com" class="text-blue-700 underline">ebookjakvydelatpenize@gmail.com</a> Vaše jméno, číslo objednávky, důvod nespokojenosti a číslo účtu na který vám vrátíme peníze.</p>
+    <p>Stačí do 14 dnů od nákupu napsat na <a href="mailto:podpora@knowhowhub.cz" class="text-blue-700 underline">podpora@knowhowhub.cz</a> Vaše jméno, číslo objednávky, důvod nespokojenosti a číslo účtu na který vám vrátíme peníze.</p>
   </div>
     <div class="faq-item mb-4">
     <h3 class="font-semibold">Kolik e-book stojí?</h3>
@@ -212,7 +212,7 @@
     <p>&copy; 2025 KnowHowHub</p>
     <p>Kontakt:</p>
     <p>tel. 724 787 096</p>
-    <p><a href="mailto:ebookjakvydelatpenize@gmail.com" class="text-blue-700 underline">ebookjakvydelatpenize@gmail.com</a></p>
+    <p><a href="mailto:podpora@knowhowhub.cz" class="text-blue-700 underline">podpora@knowhowhub.cz</a></p>
     <div class="mt-6">
   <div class="grid grid-cols-3 gap-4 sm:grid-cols-6 items-center">
     <img src="images/0.png" alt="" loading="lazy" class="mx-auto w-12 sm:w-16">
